--- a/main.html
+++ b/main.html
@@ -7,31 +7,31 @@
 </head>
 
 <body>
-	<marquee><h1>Welcome to AccioJobs!</h1></marquee>
+	<marquee><h1>Welcome to Accio Jobs!</h1></marquee>
 <h1><a href="https://acciojob.com/blog/">Blog</a></h1>
 	
 	<article>
-         <image src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height=200px;></image>
+         <image src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height="200px"></image>
 		<br>
          <a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a>
         <br>
-	    <p>We can say that optimization is...</p>
+	    <p><a href="We can say that optimization is...">We can say that optimization is...</a></p>
 	</article>
 	
 	<article>
-        <image src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" height=200px></image>
+        <image src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000"height="200px"></image>
         <br>
         <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>	
 		<br>
-		<p>DSA or Competitive programming?...</p>		
+		<p><a href="DSA or Competitive programming?...">DSA or Competitive programming?...</a></p>		
 	</article>
 	
 	<article>
-		<image src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" height=200px></image>
+		<image src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" height="200px"></image>
             <br>
 		<a href="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a>
         <br>
-		<p>As a job seeker, you may wonder...</p>
+		<p><a href="As a job seeker, you may wonder...">As a job seeker, you may wonder...</a></p>
 	</article>
 	
 	
