--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 	<article>
         <image src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000"height="200px"></image>
         <br>
-        <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>	
+        <a href="undefined">DSA vs. Competitive Programming</a>	
 		<br>
 		<p><a href="DSA or Competitive programming?...">DSA or Competitive programming?...</a></p>		
 	</article>
